--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,29 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MainActivity">
+    >
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:padding="4dp"
+        android:text="Team A"/>
 
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Team A"
-        android:gravity="center_horizontal"
-        android:textSize="14sp"/>
+        android:gravity="center"
+        android:padding="4dp"
+        android:text="0"
+        android:id="@+id/team_a_score"/>
+
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="+3 POINTS"/>
+        android:layout_margin="8dp"
+        android:text="+3 Points"
+        android:id="@+id/Button1"
+        android:onClick="Button1"/>
+
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="+2 POINTS"/>
+        android:layout_margin="8dp"
+        android:text="+2 Points"
+        android:id="@+id/Button2"
+        android:onClick="Button2"/>
+
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="+1 POINTS"/>
+        android:layout_margin="8dp"
+        android:text="Free throw"
+        android:id="@+id/Button3"
+        android:onClick="Button3"/>
 </LinearLayout>
